ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: salary-cluster
  labels:
    name: salary-cluster
spec:
  rules:
    - host: salary.increaser.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - pathType: Prefix
            path: "/get-salary"
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - pathType: Prefix
            path: "/increase-salary"
            backend:
              service:
                name: backend
                port:
                  number: 4000
